# pgf

./: .gitignore  README.md  pyproject.toml
src/pgf/: clean.py  date.py  plot.py  stats.py
tests/: test_clean.py  test_date.py  test_plot.py  test_stats.py
tests/notebook/: plot_test.ipynb
